// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PasswordInput  1`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 djOnwZ"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 bEnuwL"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 hmIkGn"
      >
        <div
          class="sc-gsTCUz kLVDRr"
        >
          <div
            class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 dpaJQp"
          >
            <input
              autocomplete="off"
              class="StyledTextInput-sc-1x30a0s-0 jKshUE sc-bdfBwQ ipzXGW"
              type="password"
              value="password"
            />
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 dfYOnT sc-dlfnbm cVArRP"
          >
            <button
              class="StyledButton-sc-323bzc-0 hiyJPE"
              tabindex="-1"
              type="button"
            >
              <svg
                aria-label="FormView"
                class="StyledIcon-ofa7kd-0 dEeaTZ"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12,17 C9.27272727,17 6,14.2222222 6,12 C6,9.77777778 9.27272727,7 12,7 C14.7272727,7 18,9.77777778 18,12 C18,14.2222222 14.7272727,17 12,17 Z M11,12 C11,12.55225 11.44775,13 12,13 C12.55225,13 13,12.55225 13,12 C13,11.44775 12.55225,11 12,11 C11.44775,11 11,11.44775 11,12 Z"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PasswordInput  2`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 djOnwZ"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 bEnuwL"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 hmIkGn"
      >
        <div
          class="sc-gsTCUz kLVDRr"
        >
          <div
            class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 dpaJQp"
          >
            <input
              aria-label="enter password"
              autocomplete="off"
              class="StyledTextInput-sc-1x30a0s-0 jKshUE sc-bdfBwQ ipzXGW"
              type="password"
              value="password"
            />
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 dfYOnT sc-dlfnbm cVArRP"
          >
            <button
              class="StyledButton-sc-323bzc-0 hiyJPE"
              tabindex="-1"
              type="button"
            >
              <svg
                aria-label="Unlock"
                class="StyledIcon-ofa7kd-0 dEeaTZ"
                viewBox="0 0 24 24"
              >
                <path
                  d="M23,23 L23,11 L9,11 L9,23 L23,23 Z M14,17 L18,17 M11,11 L11,7 C11,4 11,1 6,1 C1,1 1,4 1,7 L1,11"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
